src/objects/ensxapp__LogSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Log settings for the enosiX application</description>
    <fields>
        <fullName>ensxapp__HTTP_Trace__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled HTTP requests and responses between the enosiX application and SAP are logged at `LoggingLevel`.

Requires LoggingLevel to be enabled (e.g. a value 1 through 8) for the HTTP requests/responses to be written to the log.</inlineHelpText>
        <label>HTTP Trace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Log_Sink__c</fullName>
        <description>Custom Log Sink that receives raw log events by implementing the &apos;ensxapp.Invokable&apos; interface.</description>
        <inlineHelpText>Custom Log Sink that implements ensxapp.Invokable</inlineHelpText>
        <label>Log Sink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__LoggingLevel__c</fullName>
        <inlineHelpText>Uses the ordinal values of System.LoggingLevel:
0 - NONE (Logging disabled)
1 - INTERNAL
2 - FINEST
3 - FINER
4 - FINE
5 - DEBUG
6 - INFO
7 - WARN
8 - ERROR</inlineHelpText>
        <label>Logging Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>enosiX Log Setting</label>
</CustomObject>